fxd all bugs in portfolio structure

--- a/src/pages/blog/blog-1.hbs
+++ b/src/pages/blog/blog-1.hbs
@@ -6,7 +6,7 @@ keywords=""
 author="Valerij Shumkov"
 }}
 
-<body>
+<body class="body">
   {{>../../views/templates/caption caption="Blog Valerij Shumkov"}}
   {{>../../views/templates/preloader}}
   {{>../../views/layout/blog-page}}
