--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -6,7 +6,7 @@ keywords=""
 author="Valerij Shumkov"
 }}
 
-<body>
+<body class="body">
   {{>../views/templates/caption caption="Web-site Portfolio Valerij Shumkov"}}
   {{>../views/templates/preloader}}
   {{>../views/layout/page}}
