--- a/src/pages/portfolio/portfolio-rabota.hbs
+++ b/src/pages/portfolio/portfolio-rabota.hbs
@@ -51,13 +51,13 @@
           </div>
           <ul class="project-general-info">
             <li>
-              <p><i class="fa fa-user"></i> Valerij Shumkov</p>
+              <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
             </li>
             <li>
-              <p><i class="fa fa-calendar"></i> 12 may, 2020</p>
+              <p class="mb-10"><i class="fa fa-calendar"></i> 12 may, 2020</p>
             </li>
           </ul>
           <div class="tags-block">
@@ -65,17 +65,17 @@
               <h3 class="h3">Technology</h3>
             </div>
             <ul class="tags">
-              <li><a>Web Application</a></li>
-              <li><a>HTML</a></li>
-              <li><a>CSS</a></li>
-              <li><a>JS</a></li>
-              <li><a>Webpack</a></li>
-              <li><a>Gulp</a></li>
-              <li><a>Vue.js</a></li>
-              <li><a>Nuxt.js</a></li>
-              <li><a>PHP</a></li>
-              <li><a>Yii</a></li>
-              <li><a>Laravel</a></li>
+              <li><a class="link">Web Application</a></li>
+              <li><a class="link">HTML</a></li>
+              <li><a class="link">CSS</a></li>
+              <li><a class="link">JS</a></li>
+              <li><a class="link">Webpack</a></li>
+              <li><a class="link">Gulp</a></li>
+              <li><a class="link">Vue.js</a></li>
+              <li><a class="link">Nuxt.js</a></li>
+              <li><a class="link">PHP</a></li>
+              <li><a class="link">Yii</a></li>
+              <li><a class="link">Laravel</a></li>
             </ul>
           </div>
           <div class="btn-group share-buttons">
