--- a/src/views/partials/about.hbs
+++ b/src/views/partials/about.hbs
@@ -5,12 +5,12 @@
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-7">
-        <p>
+        <p class="mb-10">
           I am <strong>Valerij Shumkov Middle Front-end Developer</strong>, Web-programmer, with more
           than <b>5</b> years of experience.
           Education Donetsk National University specialty applied computer science.
         </p>
-        <p>
+        <p class="mb-10">
           At the age of 18, first came in touch with programming interface and app development.
           Now I am developing multifunctional <b>web applications</b> and sites, <b>3D modeling</b>, cross-platform
           <strong>web games</strong>, landing pages and online stores, <b>web services</b>, CMS and much more.
@@ -61,7 +61,8 @@
               </div>
               <div class="ci-text">
                 <h4 class="h4">Web-development</h4>
-                <p>Development of web applications, game mechanics, landing pages, multi-pages, online stores, email
+                <p class="mb-10">Development of web applications, game mechanics, landing pages, multi-pages, online
+                  stores, email
                   development, CMS systems.</p>
               </div>
             </div>
@@ -71,7 +72,8 @@
               </div>
               <div class="ci-text">
                 <h4 class="h4">SEO</h4>
-                <p>SEO website promotion in search engines and optimization. Development of valid semantic layout for
+                <p class="mb-10">SEO website promotion in search engines and optimization. Development of valid semantic
+                  layout for
                   successful promotion in search engines</p>
               </div>
             </div>
@@ -87,7 +89,8 @@
               </div>
               <div class="ci-text">
                 <h4 class="h4">Web Design</h4>
-                <p>Development of a unique design in popular applications for cross-adaptation, design of 3D models,
+                <p class="mb-10">Development of a unique design in popular applications for cross-adaptation, design of
+                  3D models,
                   development of an interface of any complexity.</p>
               </div>
             </div>
@@ -97,7 +100,8 @@
               </div>
               <div class="ci-text">
                 <h4 class="h4">Management</h4>
-                <p>Web project management is the key to successfully moving a business forward, the right decisions at
+                <p class="mb-10">Web project management is the key to successfully moving a business forward, the right
+                  decisions at
                   the foundation of development will provide a huge competitive advantage.</p>
               </div>
             </div>
