--- a/src/views/partials/resume.hbs
+++ b/src/views/partials/resume.hbs
@@ -17,7 +17,7 @@
             <div class="divider"></div>
             <div class="right-part">
               <h4 class="h4 item-title">Pianist, violinist, guitarist, flute player</h4>
-              <p>The musical school number one in the city of Donetsk.</p>
+              <p class="mb-10">The musical school number one in the city of Donetsk.</p>
             </div>
           </div>
           <div class="timeline-item clearfix">
@@ -28,7 +28,7 @@
             <div class="divider"></div>
             <div class="right-part">
               <h4 class="item-title">Applied Computer Science</h4>
-              <p>Donetsk National University at the Faculty of Economic Cybernetics,
+              <p class="mb-10">Donetsk National University at the Faculty of Economic Cybernetics,
                 specialty Applied Informatics, Business Informatics.</p>
             </div>
           </div>
@@ -46,7 +46,7 @@
             <div class="divider"></div>
             <div class="right-part">
               <h4 class="h4 item-title">Middle / Front-end / Developer</h4>
-              <p>
+              <p class="mb-10">
                 Development of websites, services of varying complexity and layout of email letters on projects:
                 Yandex.Market,
                 Johnson&Johnson, Perekrestok, SAMOLET, Alfa Insurance, VTB Bank, IQOS and others.
@@ -61,7 +61,8 @@
             <div class="divider"></div>
             <div class="right-part">
               <h4 class="h4 item-title">Junior / Front-end / Developer / Ruby</h4>
-              <p>Development and support of a large application on the Ruby on Rails framework for job search,
+              <p class="mb-10">Development and support of a large application on the Ruby on Rails framework for job
+                search,
                 development of a chat bot in native JS.</p>
             </div>
           </div>
@@ -73,7 +74,8 @@
             <div class="divider"></div>
             <div class="right-part">
               <h4 class="item-title">Junior / Front-end / Developer / Coder</h4>
-              <p>Development of corporate sites, multi-leudings, multi-page sites, online stores, development of web
+              <p class="mb-10">Development of corporate sites, multi-leudings, multi-page sites, online stores,
+                development of web
                 applications, large job search projects.</p>
             </div>
           </div>
