--- a/src/pages/portfolio/portfolio-iqos-sticks.hbs
+++ b/src/pages/portfolio/portfolio-iqos-sticks.hbs
@@ -51,13 +51,13 @@
           </div>
           <ul class="project-general-info">
             <li>
-              <p><i class="fa fa-user"></i> Valerij Shumkov</p>
+              <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
             </li>
             <li>
-              <p><i class="fa fa-calendar"></i> 12 sep, 2022</p>
+              <p class="mb-10"><i class="fa fa-calendar"></i> 12 sep, 2022</p>
             </li>
           </ul>
           <div class="tags-block">
@@ -65,12 +65,12 @@
               <h3 class="h3">Technology</h3>
             </div>
             <ul class="tags">
-              <li><a>Mechanics</a></li>
-              <li><a>Web-service</a></li>
-              <li><a>Handlebars</a></li>
-              <li><a>CSS</a></li>
-              <li><a>JS</a></li>
-              <li><a>Webpack</a></li>
+              <li><a class="link">Mechanics</a></li>
+              <li><a class="link">Web-service</a></li>
+              <li><a class="link">Handlebars</a></li>
+              <li><a class="link">CSS</a></li>
+              <li><a class="link">JS</a></li>
+              <li><a class="link">Webpack</a></li>
             </ul>
           </div>
           <div class="btn-group share-buttons">
