--- a/src/views/layout/blog-content.hbs
+++ b/src/views/layout/blog-content.hbs
@@ -25,12 +25,14 @@
           <div class="row">
             <div class=" col-xs-12 col-sm-12 ">
               <div class="col-inner">
-                <p>Nulla nulla nisl, sodales ac nulla ac, consequat vulputate purus. Curabitur tincidunt ipsum vel
+                <p class="mb-10">Nulla nulla nisl, sodales ac nulla ac, consequat vulputate purus. Curabitur tincidunt
+                  ipsum vel
                   nibh rutrum accumsan. Nunc ullamcorper posuere leo, vitae aliquet risus pharetra in. Integer
                   turpis eros, iaculis et mi non, pulvinar egestas leo. Etiam sagittis ex turpis, vitae cursus
                   tortor interdum eu. Quisque ultrices nunc eget erat vestibulum euismod. Ut mauris nisi,
                   facilisis at arcu nec, facilisis porttitor lorem.</p>
-                <p>Vivamus vitae neque molestie, porta libero sed, tincidunt leo. In nec posuere odio, id rhoncus
+                <p class="mb-10">Vivamus vitae neque molestie, porta libero sed, tincidunt leo. In nec posuere odio, id
+                  rhoncus
                   lorem. Proin id erat ut dolor condimentum viverra. Praesent viverra sed dolor ac luctus.
                   Praesent placerat id lorem quis lacinia.</p>
 
@@ -42,7 +44,8 @@
                   </footer>
                 </blockquote>
 
-                <p>Etiam interdum vulputate risus, vitae elementum neque consectetur sed. Donec at risus dui. Ut
+                <p class="mb-10">Etiam interdum vulputate risus, vitae elementum neque consectetur sed. Donec at risus
+                  dui. Ut
                   in suscipit neque. Vestibulum sit amet lobortis magna, commodo venenatis ante. Cras molestie, ex
                   a auctor lacinia, risus est aliquam risus, sit amet semper purus tortor id ante. Donec lacus
                   ipsum, porttitor et libero a, fringilla auctor quam. Sed in nisl id libero tincidunt aliquet.
@@ -50,7 +53,8 @@
                   consequat. Maecenas efficitur massa vel eros sagittis dapibus. Nam lobortis mi in turpis
                   hendrerit eleifend. Nulla non massa felis.</p>
 
-                <p>Donec sit amet dolor ante. Vivamus vel massa accumsan, faucibus quam quis, convallis velit.
+                <p class="mb-10">Donec sit amet dolor ante. Vivamus vel massa accumsan, faucibus quam quis, convallis
+                  velit.
                   Aliquam erat volutpat. Integer imperdiet diam quis arcu venenatis, quis sagittis nibh rhoncus.
                   Donec non nisi scelerisque, sodales metus quis, accumsan mauris. Curabitur volutpat risus rutrum
                   erat condimentum tristique. Nullam at felis diam. Quisque dictum felis non ante pretium mollis.
