--- a/src/pages/portfolio/portfolio-yandex-quiz.hbs
+++ b/src/pages/portfolio/portfolio-yandex-quiz.hbs
@@ -16,14 +16,22 @@
       <div class="col-sm-8 col-md-8 portfolio-block">
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
-            {{!-- Detailed Slider --}}
-            <img src="" alt="" />
+            <img src="@img/works/yandex-quiz/1.jpg" alt="" aria-hidden="true" />
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/yandex-quiz/2.jpg" alt="" aria-hidden="true" />
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/yandex-quiz/3.jpg" alt="" aria-hidden="true" />
+          </div>
+          <div class="item">
+            <img src="@img/works/yandex-quiz/4.jpg" alt="" aria-hidden="true" />
+          </div>
+          <div class="item">
+            <img src="@img/works/yandex-quiz/5.jpg" alt="" aria-hidden="true" />
+          </div>
+          <div class="item">
+            <img src="@img/works/yandex-quiz/6.jpg" alt="" aria-hidden="true" />
           </div>
         </div>
         <script type="text/javascript">
@@ -44,7 +52,6 @@
         </script>
       </div>
       <div class="col-sm-4 col-md-4 portfolio-block">
-        <!-- Project Description -->
         <div class="project-description">
           <div class="block-title">
             <h3 class="h3">Description</h3>
@@ -54,7 +61,9 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
+              <p class="mb-10"><i class="fa fa-globe"></i> <a
+                  href="https://email.wim.agency/projects/projects/yandex-quiz/index.html"
+                  target="_blank">www.project-site.com</a></p>
             </li>
             <li>
               <p class="mb-10"><i class="fa fa-calendar"></i> 12 aug, 2022</p>
