--- a/src/pages/portfolio/portfolio-yandex-brth.hbs
+++ b/src/pages/portfolio/portfolio-yandex-brth.hbs
@@ -1,10 +1,6 @@
 <div id="ajax-page" class="ajax-page-content">
   <div class="ajax-page-wrapper">
     <div class="ajax-page-nav">
-      <div class="nav-item ajax-page-prev-next">
-        <a class="ajax-page-load" href="#"><i class="lnr lnr-chevron-left"></i></a>
-        <a class="ajax-page-load" href="#"><i class="lnr lnr-chevron-right"></i></a>
-      </div>
       <div class="nav-item ajax-page-close-button">
         <a id="ajax-page-close-button" href="#"><i class="lnr lnr-cross"></i></a>
       </div>
@@ -17,13 +13,13 @@
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
             {{!-- Detailed Slider --}}
-            <img src="" alt="" />
+            <img src="@img/works/yandex-brth/1.jpg" alt="" aria-hidden="true" />
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/yandex-brth/2.jpg" alt="" aria-hidden="true" />
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/yandex-brth/3.jpg" alt="" aria-hidden="true" />
           </div>
         </div>
         <script type="text/javascript">
@@ -52,9 +48,6 @@
           <ul class="project-general-info">
             <li>
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
-            </li>
-            <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
             </li>
             <li>
               <p class="mb-10"><i class="fa fa-calendar"></i> 18 mar, 2022</p>
