--- a/src/pages/portfolio/portfolio-svtlitskaya.hbs
+++ b/src/pages/portfolio/portfolio-svtlitskaya.hbs
@@ -14,13 +14,19 @@
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
             {{!-- Detailed Slider --}}
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-svtlitskaya/1.jpg" alt="" aria-hidden="true">
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-svtlitskaya/2.jpg" alt="" aria-hidden="true">
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-svtlitskaya/3.jpg" alt="" aria-hidden="true">
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-svtlitskaya/4.jpg" alt="" aria-hidden="true">
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-svtlitskaya/5.jpg" alt="" aria-hidden="true">
           </div>
         </div>
         <script type="text/javascript">
@@ -51,7 +57,8 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="https://guileless-muffin-9a6095.netlify.app/"
+                  target="_blank">www.project-site.com</a></p>
             </li>
             <li>
               <p class="mb-10"><i class="fa fa-calendar"></i> 12 sep, 2022</p>
