--- a/src/pages/portfolio/portfolio-codx.hbs
+++ b/src/pages/portfolio/portfolio-codx.hbs
@@ -1,7 +1,6 @@
 <div id="ajax-page" class="ajax-page-content">
   <div class="ajax-page-wrapper">
     <div class="ajax-page-nav">
-
       <div class="nav-item ajax-page-close-button">
         <a id="ajax-page-close-button" href="#"><i class="lnr lnr-cross"></i></a>
       </div>
@@ -11,16 +10,22 @@
     </div>
     <div class="row">
       <div class="col-sm-8 col-md-8 portfolio-block">
+        {{!-- Detailed Slider --}}
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
-            {{!-- Detailed Slider --}}
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-codx/1.jpg" alt="" aria-hidden="true">
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-codx/2.jpg" alt="" aria-hidden="true">
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-codx/3.jpg" alt="" aria-hidden="true">
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-codx/4.jpg" alt="" aria-hidden="true">
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-codx/5.jpg" alt="" aria-hidden="true">
           </div>
         </div>
         <script type="text/javascript">
@@ -51,7 +56,8 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/codx/index.html"
+                  target="_blank">www.project-site.com</a></p>
             </li>
             <li>
               <p class="mb-10"><i class="fa fa-calendar"></i> 28 jul, 2022</p>
