added new works

--- a/src/pages/portfolio/portfolio-addata.hbs
+++ b/src/pages/portfolio/portfolio-addata.hbs
@@ -1,7 +1,6 @@
 <div id="ajax-page" class="ajax-page-content">
   <div class="ajax-page-wrapper">
     <div class="ajax-page-nav">
-
       <div class="nav-item ajax-page-close-button">
         <a id="ajax-page-close-button" href="#"><i class="lnr lnr-cross"></i></a>
       </div>
@@ -13,14 +12,13 @@
       <div class="col-sm-8 col-md-8 portfolio-block">
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
-            {{!-- Detailed Slider --}}
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-addata/1.jpg" alt="" aria-hidden="true">
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-addata/2.jpg" alt="" aria-hidden="true">
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-addata/3.jpg" alt="" aria-hidden="true">
           </div>
         </div>
         <script type="text/javascript">
@@ -51,10 +49,11 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="https://ad-data.ru/"
+                  target="_blank">www.project-site.com</a></p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-calendar"></i> 12 sep, 2022</p>
+              <p class="mb-10"><i class="fa fa-calendar"></i> 8 mar, 2022</p>
             </li>
           </ul>
           <div class="tags-block">
@@ -66,6 +65,8 @@
               <li><a class="link">CSS</a></li>
               <li><a class="link">JS</a></li>
               <li><a class="link">Webpack</a></li>
+              <li><a class="link">Web Service</a></li>
+              <li><a class="link">Web Application</a></li>
               <li><a class="link">CRM</a></li>
             </ul>
           </div>
