--- a/src/views/partials/works.hbs
+++ b/src/views/partials/works.hbs
@@ -162,9 +162,9 @@
   "category_service"]'
   imgSrc='@img/portfolio/portfolio-alfa-reinvest.jpg' className="portfolio-picture"}}
 
-  {{>../portfolio/viewer title='Nft' category='Web Service' groups='["category_all",
+  {{>../portfolio/detailed title='Nft' category='Web Service' groups='["category_all",
   "category_service"]'
-  imgSrc='@img/portfolio/portfolio-nft.jpg' className="portfolio-picture"}}
+  imgSrc='@img/portfolio/portfolio-nft.jpg' className="portfolio-picture" hrefLink="portfolio-nft.html"}}
 
   {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
   "category_email"]'
