--- a/src/pages/portfolio/portfolio-nft.hbs
+++ b/src/pages/portfolio/portfolio-nft.hbs
@@ -6,19 +6,28 @@
       </div>
     </div>
     <div class="ajax-page-title">
-      <h1 class="h1">Zero Design</h1>
+      <h1 class="h1">NFT</h1>
     </div>
     <div class="row">
       <div class="col-sm-8 col-md-8 portfolio-block">
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
-            <img src="@img/works/portfolio-zerodesign/1.jpg" alt="" aria-hidden="true">
+            <img src="@img/works/portfolio-nft/1.jpg" alt="" aria-hidden="true">
           </div>
           <div class="item">
-            <img src="@img/works/portfolio-zerodesign/2.jpg" alt="" aria-hidden="true">
+            <img src="@img/works/portfolio-nft/2.jpg" alt="" aria-hidden="true">
           </div>
           <div class="item">
-            <img src="@img/works/portfolio-zerodesign/3.jpg" alt="" aria-hidden="true">
+            <img src="@img/works/portfolio-nft/3.jpg" alt="" aria-hidden="true">
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-nft/4.jpg" alt="" aria-hidden="true">
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-nft/5.jpg" alt="" aria-hidden="true">
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-nft/6.jpg" alt="" aria-hidden="true">
           </div>
         </div>
         <script type="text/javascript">
@@ -49,11 +58,11 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="https://valerij2000.github.io/zero-design/"
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/nft-peeps/index.html"
                   target="_blank">www.project-site.com</a></p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-calendar"></i> 12 sep, 2022</p>
+              <p class="mb-10"><i class="fa fa-calendar"></i> 29 oct, 2022</p>
             </li>
           </ul>
           <div class="tags-block">
@@ -61,11 +70,12 @@
               <h3 class="h3">Technology</h3>
             </div>
             <ul class="tags">
-              <li><a class="link">Portfolio</a></li>
+              <li><a class="link">Mechanics</a></li>
               <li><a class="link">HTML</a></li>
               <li><a class="link">CSS</a></li>
               <li><a class="link">JS</a></li>
-              <li><a class="link">Gulp</a></li>
+              <li><a class="link">Web Service</a></li>
+              <li><a class="link">CRM Marketing</a></li>
             </ul>
           </div>
           <div class="btn-group share-buttons">
