--- a/src/pages/portfolio/portfolio-app-mobile.hbs
+++ b/src/pages/portfolio/portfolio-app-mobile.hbs
@@ -1,7 +1,6 @@
 <div id="ajax-page" class="ajax-page-content">
   <div class="ajax-page-wrapper">
     <div class="ajax-page-nav">
-
       <div class="nav-item ajax-page-close-button">
         <a id="ajax-page-close-button" href="#"><i class="lnr lnr-cross"></i></a>
       </div>
@@ -14,13 +13,13 @@
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
             {{!-- Detailed Slider --}}
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-app-mobile/1.jpg" alt="" aria-hidden="true">
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-app-mobile/2.jpg" alt="" aria-hidden="true">
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-app-mobile/3.jpg" alt="" aria-hidden="true">
           </div>
         </div>
         <script type="text/javascript">
@@ -51,10 +50,11 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/shopmobile/"
+                  target="_blank">www.project-site.com</a></p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-calendar"></i> 20 aug, 2022</p>
+              <p class="mb-10"><i class="fa fa-calendar"></i> 20 may, 2022</p>
             </li>
           </ul>
           <div class="tags-block">
