--- a/src/pages/portfolio/portfolio-hromatograf.hbs
+++ b/src/pages/portfolio/portfolio-hromatograf.hbs
@@ -1,7 +1,6 @@
-.<div id="ajax-page" class="ajax-page-content">
+<div id="ajax-page" class="ajax-page-content">
   <div class="ajax-page-wrapper">
     <div class="ajax-page-nav">
-
       <div class="nav-item ajax-page-close-button">
         <a id="ajax-page-close-button" href="#"><i class="lnr lnr-cross"></i></a>
       </div>
