create particlesJS to home page screen

--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -40,6 +40,14 @@
   background-size: cover;
 }
 
+[data-id="home"] .section-content {
+  padding: 0;
+}
+
+.main-head {
+  position: absolute;
+}
+
 .section-content {
   background-color: #222;
   padding: 20px;
