--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -3,7 +3,8 @@
     <use xlink:href="svg/spritemap.svg#sprite-icon"></use>
   </svg>
   <div class="section-content vcentered">
-    <div class="row">
+    {{>particles}}
+    <div class="row main-head">
       <div class="col-sm-12 col-md-12 col-lg-12">
         <div class="title-block">
           <h2 class="h2">Valerij Shumkov</h2>
