--- a/src/views/partials/resume.hbs
+++ b/src/views/partials/resume.hbs
@@ -316,7 +316,7 @@
       <div class="col-xs-12 col-sm-6">
         <div class="certificate-item clearfix">
           <div class="certi-logo">
-            <img src="@img/branding/iqos.png" alt="IQOS">
+            <img class="img" src="@img/branding/iqos.png" alt="IQOS">
           </div>
           <div class="certi-content">
             <div class="certi-title">
@@ -331,7 +331,7 @@
       <div class="col-xs-12 col-sm-6">
         <div class="certificate-item clearfix">
           <div class="certi-logo">
-            <img src="@img/branding/yandex.png" alt="Yandex">
+            <img class="img" src="@img/branding/yandex.png" alt="Yandex">
           </div>
           <div class="certi-content">
             <div class="certi-title">
@@ -346,7 +346,7 @@
       <div class="col-xs-12 col-sm-6">
         <div class="certificate-item clearfix">
           <div class="certi-logo">
-            <img src="@img/branding/pg.png" alt="PG">
+            <img class="img" src="@img/branding/pg.png" alt="PG">
           </div>
           <div class="certi-content">
             <div class="certi-title">
@@ -361,7 +361,7 @@
       <div class="col-xs-12 col-sm-6">
         <div class="certificate-item clearfix">
           <div class="certi-logo">
-            <img src="@img/branding/alfa.png" alt="Alfa">
+            <img class="img" src="@img/branding/alfa.png" alt="Alfa">
           </div>
           <div class="certi-content">
             <div class="certi-title">
@@ -391,7 +391,7 @@
       <div class="col-xs-12 col-sm-6">
         <div class="certificate-item clearfix">
           <div class="certi-logo">
-            <img src="@img/branding/perik.png" alt="Perekrestok">
+            <img class="img" src="@img/branding/perik.png" alt="Perekrestok">
           </div>
           <div class="certi-content">
             <div class="certi-title">
