--- a/src/pages/portfolio/portfolio-app-filter.hbs
+++ b/src/pages/portfolio/portfolio-app-filter.hbs
@@ -13,13 +13,10 @@
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
             {{!-- Detailed Slider --}}
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-app-filter/1.jpg" alt="" aria-hidden="true">
           </div>
           <div class="item">
-            <img src="" alt="" />
-          </div>
-          <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-app-filter/2.jpg" alt="" aria-hidden="true">
           </div>
         </div>
         <script type="text/javascript">
@@ -50,7 +47,9 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
+              <p class="mb-10"><i class="fa fa-globe"></i> <a
+                  href="https://email.wim.agency/projects/CardsFilters/index.html"
+                  target="_blank">www.project-site.com</a></p>
             </li>
             <li>
               <p class="mb-10"><i class="fa fa-calendar"></i> 12 sep, 2022</p>
