--- a/src/styles/partials/_fonts.scss
+++ b/src/styles/partials/_fonts.scss
@@ -1,1 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i');
+@font-face {
+  font-family: 'Poppins';
+  src: url('@fonts/Poppins.woff2') format('woff2'),
+    url('@fonts/Poppins.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
