added new works

--- a/src/pages/portfolio/portfolio-avtoraketa-perevod.hbs
+++ b/src/pages/portfolio/portfolio-avtoraketa-perevod.hbs
@@ -1,26 +1,21 @@
-.<div id="ajax-page" class="ajax-page-content">
+<div id="ajax-page" class="ajax-page-content">
   <div class="ajax-page-wrapper">
     <div class="ajax-page-nav">
-
       <div class="nav-item ajax-page-close-button">
         <a id="ajax-page-close-button" href="#"><i class="lnr lnr-cross"></i></a>
       </div>
     </div>
     <div class="ajax-page-title">
-      <h1 class="h1">Hromatograf</h1>
+      <h1 class="h1">Avtoraketa Perevod</h1>
     </div>
     <div class="row">
       <div class="col-sm-8 col-md-8 portfolio-block">
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
-            {{!-- Detailed Slider --}}
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-avtoraketa-perevod/1.jpg" alt="" />
           </div>
           <div class="item">
-            <img src="" alt="" />
-          </div>
-          <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-avtoraketa-perevod/2.jpg" alt="" />
           </div>
         </div>
         <script type="text/javascript">
@@ -41,7 +36,6 @@
         </script>
       </div>
       <div class="col-sm-4 col-md-4 portfolio-block">
-        <!-- Project Description -->
         <div class="project-description">
           <div class="block-title">
             <h3 class="h3">Description</h3>
@@ -51,7 +45,8 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://avtoraketa-perevod.site/"
+                  target="_blank">www.project-site.com</a></p>
             </li>
             <li>
               <p class="mb-10"><i class="fa fa-calendar"></i> 22 oct, 2022</p>
