added new works

--- a/src/pages/portfolio/portfolio-rostjob.hbs
+++ b/src/pages/portfolio/portfolio-rostjob.hbs
@@ -1,7 +1,6 @@
 <div id="ajax-page" class="ajax-page-content">
   <div class="ajax-page-wrapper">
     <div class="ajax-page-nav">
-
       <div class="nav-item ajax-page-close-button">
         <a id="ajax-page-close-button" href="#"><i class="lnr lnr-cross"></i></a>
       </div>
@@ -13,14 +12,25 @@
       <div class="col-sm-8 col-md-8 portfolio-block">
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
-            {{!-- Detailed Slider --}}
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-rostjob/1.jpg" alt="" />
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-rostjob/2.jpg" alt="" />
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-rostjob/3.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-rostjob/4.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-rostjob/5.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-rostjob/6.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-rostjob/7.jpg" alt="" />
           </div>
         </div>
         <script type="text/javascript">
@@ -51,7 +61,8 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="https://rostjob.com/"
+                  target="_blank">www.project-site.com</a></p>
             </li>
             <li>
               <p class="mb-10"><i class="fa fa-calendar"></i> 12 sep, 2022</p>
