--- a/src/views/partials/works.hbs
+++ b/src/views/partials/works.hbs
@@ -38,6 +38,10 @@
   "category_landings"]'
   imgSrc='@img/portfolio/portfolio-iqos-experince.jpg' hrefLink="portfolio-iqos-experince.html"}}
 
+  {{>../portfolio/detailed title='English Cards' category='Web Service' groups='["category_all",
+  "category_app"]'
+  imgSrc='@img/portfolio/portfolio-english-cards.jpg' hrefLink="portfolio-english-cards.html"}}
+
   {{>../portfolio/detailed title='Alfa' category='Landings' groups='["category_all",
   "category_landings"]'
   imgSrc='@img/portfolio/portfolio-alfa-investing.jpg' hrefLink="portfolio-alfa-investing.html"}}
@@ -402,15 +406,11 @@
   "category_email"]'
   imgSrc='@img/portfolio/portfolio-email-yandex-zima.jpg'}}
 
-  {{>../portfolio/detailed title='English Cards' category='Web Service' groups='["category_all",
-  "category_app"]'
-  imgSrc='@img/portfolio/portfolio-english-cards.jpg' hrefLink="portfolio-english-cards.html"}}
-
-  {{>../portfolio/detailed title='English Cards' category='Web Application' groups='["category_all",
+  {{>../portfolio/detailed title='Radisson Sauna' category='Web Application' groups='["category_all",
   "category_service"]'
   imgSrc='@img/portfolio/portfolio-radisson-sauna.jpg' hrefLink="portfolio-radisson-sauna.html"}}
 
-  {{>../portfolio/viewer title='English Cards' category='Email Marketing' groups='["category_all",
+  {{>../portfolio/viewer title='WIM' category='Email Marketing' groups='["category_all",
   "category_email"]'
   imgSrc='@img/portfolio/portfolio-wim.jpg'}}
 
