--- a/src/pages/portfolio/portfolio-design-kate.hbs
+++ b/src/pages/portfolio/portfolio-design-kate.hbs
@@ -1,7 +1,6 @@
 <div id="ajax-page" class="ajax-page-content">
   <div class="ajax-page-wrapper">
     <div class="ajax-page-nav">
-
       <div class="nav-item ajax-page-close-button">
         <a id="ajax-page-close-button" href="#"><i class="lnr lnr-cross"></i></a>
       </div>
@@ -13,14 +12,22 @@
       <div class="col-sm-8 col-md-8 portfolio-block">
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
-            {{!-- Detailed Slider --}}
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-design-kate/1.jpg" alt="" />
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-design-kate/2.jpg" alt="" />
           </div>
           <div class="item">
-            <img src="" alt="" />
+            <img src="@img/works/portfolio-design-kate/3.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-design-kate/4.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-design-kate/5.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="@img/works/portfolio-design-kate/6.jpg" alt="" />
           </div>
         </div>
         <script type="text/javascript">
@@ -49,9 +56,6 @@
           <ul class="project-general-info">
             <li>
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
-            </li>
-            <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
             </li>
             <li>
               <p class="mb-10"><i class="fa fa-calendar"></i> 12 sep, 2022</p>
