added new works

--- a/src/views/partials/works.hbs
+++ b/src/views/partials/works.hbs
@@ -14,6 +14,10 @@
   "category_app"]'
   imgSrc='@img/portfolio/portfolio-avitoparser.jpg' hrefLink="portfolio-avitoparser.html"}}
 
+  {{>../portfolio/detailed title='Azbuka Vkusa' category='Web Games' groups='["category_all",
+  "category_games"]'
+  imgSrc='@img/portfolio/portfolio-azbuka-coloring.jpg' hrefLink="portfolio-azbuka-coloring.html"}}
+
   {{>../portfolio/detailed title='Vlad Kadoni' category='Multilandings' groups='["category_all",
   "category_multilandings"]'
   imgSrc='@img/portfolio/portfolio-vladkadoni.jpg' hrefLink="portfolio-vladkadoni.html"}}
