fxd logo mobile

--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -1,7 +1,5 @@
 <section data-id="home" class="animated-section start-page">
-  <svg class="main-logo">
-    <use xlink:href="svg/spritemap.svg#sprite-icon"></use>
-  </svg>
+  <img src="@img/logo/logo.svg" alt="Valerij Shumkov" class="main-logo">
   <div class="section-content vcentered">
     {{>particles}}
     <div class="row main-head">
