--- a/src/views/partials/portfolio.hbs
+++ b/src/views/partials/portfolio.hbs
@@ -8,6 +8,7 @@
         <div class="portfolio-content">
           {{>portfolio-filters}}
           {{>works}}
+          <button class="show-more">Show more</button>
         </div>
       </div>
     </div>
