--- a/src/views/portfolio/viewer.hbs
+++ b/src/views/portfolio/viewer.hbs
@@ -1,4 +1,4 @@
-<figure class="item lbimage" data-groups='{{groups}}'>
+<figure class="item lbimage item-portfolio" data-groups='{{groups}}'>
   <div class="portfolio-item-img">
     <img src={{imgSrc}} alt="{{title}}" title="{{title}}" class="img">
     <a class="lightbox" href={{imgSrc}} title="{{title}}"></a>
