--- a/src/views/portfolio/detailed.hbs
+++ b/src/views/portfolio/detailed.hbs
@@ -1,4 +1,4 @@
-<figure class="item standard" data-groups='{{groups}}'>
+<figure class="item standard item-portfolio" data-groups='{{groups}}'>
   <div class="portfolio-item-img">
     <img src={{imgSrc}} alt="{{title}}" title="{{title}}" class="img">
     <a href={{hrefLink}} class="ajax-page-load"></a>
