update links hosting

--- a/src/pages/portfolio/portfolio-alto.hbs
+++ b/src/pages/portfolio/portfolio-alto.hbs
@@ -55,7 +55,7 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/alto/index.html"
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://web-archive.site/alto/index.html"
                   target="_blank">www.project-site.com</a></p>
             </li>
             <li>
