--- a/src/pages/portfolio/portfolio-app-mobile.hbs
+++ b/src/pages/portfolio/portfolio-app-mobile.hbs
@@ -50,7 +50,7 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/shopmobile/"
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://web-archive.site/shopmobile/"
                   target="_blank">www.project-site.com</a></p>
             </li>
             <li>
