--- a/src/pages/portfolio/portfolio-ladymorgana.hbs
+++ b/src/pages/portfolio/portfolio-ladymorgana.hbs
@@ -53,7 +53,7 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/lady-morgana/index.html"
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://web-archive.site/lady-morgana/index.html"
                   target="_blank">www.project-site.com</a></p>
             </li>
             <li>
