--- a/src/pages/portfolio/portfolio-mediccenter.hbs
+++ b/src/pages/portfolio/portfolio-mediccenter.hbs
@@ -52,7 +52,7 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/world-science/"
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://web-archive.site/world-science/"
                   target="_blank">www.project-site.com</a></p>
             </li>
             <li>
