--- a/src/pages/portfolio/portfolio-nft.hbs
+++ b/src/pages/portfolio/portfolio-nft.hbs
@@ -58,7 +58,7 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/nft-peeps/index.html"
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://web-archive.site/nft-peeps/index.html"
                   target="_blank">www.project-site.com</a></p>
             </li>
             <li>
