--- a/src/pages/portfolio/portfolio-calmar.hbs
+++ b/src/pages/portfolio/portfolio-calmar.hbs
@@ -49,7 +49,7 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/callmar/index.html"
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://web-archive.site/callmar/index.html"
                   target="_blank">www.project-site.com</a></p>
             </li>
             <li>
