--- a/src/pages/portfolio/portfolio-codx.hbs
+++ b/src/pages/portfolio/portfolio-codx.hbs
@@ -56,7 +56,7 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/codx/index.html"
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://web-archive.site/codx/index.html"
                   target="_blank">www.project-site.com</a></p>
             </li>
             <li>
