--- a/src/pages/portfolio/portfolio-dietolog.hbs
+++ b/src/pages/portfolio/portfolio-dietolog.hbs
@@ -55,7 +55,7 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/dietologonline/"
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://web-archive.site/dietologonline/"
                   target="_blank">www.project-site.com</a></p>
             </li>
             <li>
