--- a/src/pages/portfolio/portfolio-english-cards.hbs
+++ b/src/pages/portfolio/portfolio-english-cards.hbs
@@ -70,7 +70,7 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/english-cards/"
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://web-archive.site/english-cards/"
                   target="_blank">www.project-site.com</a></p>
             </li>
             <li>
