--- a/src/pages/portfolio/portfolio-weather-app.hbs
+++ b/src/pages/portfolio/portfolio-weather-app.hbs
@@ -47,7 +47,7 @@
               <p class="mb-10"><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
-              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://lazer-beauti.ru/wether-app/"
+              <p class="mb-10"><i class="fa fa-globe"></i> <a href="http://web-archive.site/wether-app/"
                   target="_blank">www.project-site.com</a></p>
             </li>
             <li>
